[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/hole_tile.gd" type="Script" id=1]
[ext_resource path="res://models/holeOpen.glb" type="PackedScene" id=2]
[ext_resource path="res://models/flag_red.glb" type="PackedScene" id=3]
[ext_resource path="res://prefabs/collisions/hole_shape.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.144, 0.043, 0.144 )

[sub_resource type="CylinderShape" id=2]
radius = 0.126917
height = 0.398263

[node name="HoleOpen" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="tmpParent" parent="." index="0"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="flag_red" parent="." index="1" instance=ExtResource( 3 )]

[node name="HoleArea" type="Area" parent="." index="2"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="HoleArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.054, 0 )
shape = SubResource( 1 )

[node name="HoleDropArea" type="Area" parent="." index="3"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="HoleDropArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00219129, 0.18934, -0.000820272 )
shape = SubResource( 2 )

[node name="InnerHoleBody" parent="." index="4" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00179252, -0.00272474, -0.00200801 )
collision_layer = 9
[connection signal="body_entered" from="HoleDropArea" to="." method="_on_HoleDropArea_body_entered"]
[connection signal="body_exited" from="HoleDropArea" to="." method="_on_HoleDropArea_body_exited"]
